force-app/main/default/objects/FEC_IPP__c/FEC_IPP__c.object-meta.xml
<CustomObject>
    <label>IPP</label>
    <nameField>
        <displayFormat>IPPN - {0}</displayFormat>
        <label>IPP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>