force-app/main/default/objects/FEC_IPP__c/fields/FEC_ESign_Source__c.field-meta.xml
<CustomField>
    <fullName>FEC_ESign_Source__c</fullName>
    <label>E-sign Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>