force-app/main/default/objects/FEC_IPP__c/fields/FEC_IPP_Closure_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Closure_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPP Closure Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>IPP Closure Selection</relationshipLabel>
    <relationshipName>FEC_IPP_Closure_Selection</relationshipName>
    <type>Lookup</type>
</CustomField>