force-app/main/default/objects/FEC_IPP__c/fields/FEC_IPP_Current_Term__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Current_Term__c</fullName>
    <label>IPP Current Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>