force-app/main/default/objects/FEC_IPP__c/fields/FEC_IPP_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Interest_Rate__c</fullName>
    <label>IPP Interest Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>