force-app/main/default/objects/FEC_IPP__c/fields/FEC_IPP_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Open_Date__c</fullName>
    <label>IPP Open Date</label>
    <type>Date</type>
</CustomField>