force-app/main/default/objects/FEC_IPP__c/fields/FEC_IPP_Plan__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Plan__c</fullName>
    <label>IPP Plan</label>
    <length>80</length>
    <type>Text</type>
</CustomField>