force-app/main/default/objects/FEC_IPP__c/fields/FEC_IPP_Record_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Record_No__c</fullName>
    <label>IPP Record No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>