force-app/main/default/objects/FEC_IPP__c/fields/FEC_Origination_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Origination_Channel__c</fullName>
    <label>Origination Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>