force-app/main/default/objects/FEC_IPP__c/fields/FEC_Sales_Mode__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sales_Mode__c</fullName>
    <label>Sales Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>