force-app/main/default/objects/FEC_IPP__c/fields/FEC_Total_IPP_Balance__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_IPP_Balance__c</fullName>
    <label>Total IPP Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>