force-app/main/default/objects/FEC_IPP__c/fields/FEC_Total_IPP_Monthly_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_IPP_Monthly_Interest__c</fullName>
    <description>Tổng số tiền lãi IPP</description>
    <label>Total IPP Monthly Interest</label>
    <summarizedField>FEC_IPP_Schedule__c.FEC_IPP_Monthly_Interest__c</summarizedField>
    <summaryForeignKey>FEC_IPP_Schedule__c.FEC_IPP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>