force-app/main/default/objects/FEC_IPP__c/fields/FEC_Total_IPP_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_IPP_Payment_Amount__c</fullName>
    <description>Tổng số tiền trả góp</description>
    <label>Total IPP Payment Amount</label>
    <summarizedField>FEC_IPP_Schedule__c.FEC_IPP_Payment_Amount__c</summarizedField>
    <summaryForeignKey>FEC_IPP_Schedule__c.FEC_IPP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>